2014-11-04  Stefan Monnier  <monnier@iro.umontreal.ca>

	* toolbar-x.el: Adjust copyright years.
	(require): Require cl at compile-time.
	(toolbarx-good-option-list-p): Use pushnew instead of add-to-list.

	* tex.el (url-unreserved-chars): Declare to silence byte-compiler.
	(TeX-tree-expand): Use pushnew instead of add-to-list.  Iterate
	path-list in reversed order.
	(TeX-style-path): Use mapc instead of mapcar for side-effects.
	(TeX-file-extensions, BibTeX-file-extensions)
	(TeX-Biber-file-extensions): Declare to silence byte-compiler.
	(TeX-tree-roots): Use pushnew instead of add-to-list.
	(TeX-search-files-by-type): Use setq/pushnew instead of
	dolist/add-to-list.
	(TeX-doc): Use pushnew instead of add-to-list.

	* tex-info.el (require): Require cl at compile-time.
	(Texinfo-insert-node): Use pushnew instead of add-to-list.
	(reftex-section-levels-all, reftex-level-indent)
	(reftex-label-menu-flags, reftex-tables-dirty): Always
	forward-declare (not only at compile-time).
	(when): declare-function only at compile-time.

	* tex-fold.el: Adjust copyright years.
	(require): Require cl at compile-time.
	(TeX-fold-region-macro-or-env, TeX-fold-update-at-point): Use
	pushnew instead of add-to-list.
	(TeX-fold-hide-item): Use setq instead of add-to-list.

	* tex-buf.el (font-lock-mode-enable-list)
	(font-lock-auto-fontify, font-lock-defaults-alist): Declare vars
	to silence byte-compiler.

	* multi-prompt.el: Adjust copyright years.
	(multi-prompt): Don't let-bind unused var done.
	(multi-prompt-next-must-match): Use minibuffer-completion-table
	instead of dynamically bound table.

	* latex.el (require): Require cl at compile-time.
	(title, name, level, done-mark, toc): Declare dynamic vars.
	(LaTeX-env-document, TeX-arg-index-tag, TeX-arg-document)
	(LaTeX-arg-usepackage, TeX-arg-verb, ): Rename unused arg.
	(LaTeX-listify-package-options): Use setq instead of add-to-list
	to add to local var.
	(reftex-ref-macro-prompt, TeX-arg-item-label-p)