@@ -1,3 +1,8 @@
+2014-11-04  Tassilo Horn  <tsdh@gnu.org>
+
+	* tex.el (VirTeX-common-initialization): Define a variable alias
+	for find-file-hook on XEmacs.
+
 2014-11-04  Stefan Monnier  <monnier@iro.umontreal.ca>
 
 	* toolbar-x.el: Adjust copyright years.
